crates/shell/src/shells/snapshots/starbase_shell__shells__murex__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/murex.rs
expression: "Murex.format_hook(Hook::Activate\n{\n    command: \"starbase hook murex\".into(), function: \"_starbase_hook\".into(),\n}).unwrap()"
---
function _starbase_hook {
  starbase hook murex -> source
}
