crates/shell/src/shells/snapshots/starbase_shell__shells__murex__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/murex.rs
expression: "Murex.format_hook(Hook::OnContextChange\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
event onPrompt _starbase_hook=before {
  _starbase_hook
}
