crates/shell/src/shells/snapshots/starbase_shell__shells__murex__tests__formats_register_handlers_hook.snap
---
source: crates/shell/src/shells/murex.rs
expression: "Murex.format_hook(Hook::RegisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
event onPrompt _starbase_hook_on_prompt=before {
  _starbase_hook
}
